2008-04-23  Darin Adler  <darin@apple.com>

        - updated a test affected by the addition of mask-composite

        * svg/css/getComputedStyle-basic-expected.txt: Updated.

2008-04-23  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        - test that moving forward through bidirectional text does not skip the
          position after the last character on the line

        * editing/selection/move-past-trailing-space.html: Added.
        * platform/mac/editing/selection/move-past-trailing-space-expected.checksum: Added.
        * platform/mac/editing/selection/move-past-trailing-space-expected.png: Added.
        * platform/mac/editing/selection/move-past-trailing-space-expected.txt: Added.

2008-04-22  Anatoli Papirovski  <apapirovski@mac.com>

        Reviewed by Dan Bernstein.

        https://bugs.webkit.org/show_bug.cgi?id=18584
        Add a test case for border-color inheritance.

        * fast/borders/border-color-inherit.html: Added.
        * platform/mac/fast/borders/border-color-inherit-expected.checksum: Added.
        * platform/mac/fast/borders/border-color-inherit-expected.png: Added.
        * platform/mac/fast/borders/border-color-inherit-expected.txt: Added.

2008-04-22  David Hyatt  <hyatt@apple.com>

        Add support for mask-composite.

        Reviewed by Sam Weinig

        * fast/backgrounds/mask-composite.html: Added.
        * fast/backgrounds/resources/mask-bottom-left.png: Added.
        * fast/backgrounds/resources/mask-bottom-right.png: Added.
        * fast/backgrounds/resources/mask-bottom.png: Added.
        * fast/backgrounds/resources/mask-center.png: Added.
        * fast/backgrounds/resources/mask-left.png: Added.
        * fast/backgrounds/resources/mask-right.png: Added.
        * fast/backgrounds/resources/mask-top-left.png: Added.
        * fast/backgrounds/resources/mask-top-right.png: Added.
        * fast/backgrounds/resources/mask-top.png: Added.