@@ -1,0 +1,3 @@
+This tests for a bug where moving the caret left towards a non-editable pocket of an editable region would make the caret disappear. The caret should be just after the 'b' in "Bob".
+
+Caret One: (" ; ", 0)
