@@ -1,0 +1,3 @@
+This tests for a bug where moving the caret right towards a non-editable pocket of an editable region would make the caret disappear. The caret should be just before the 'S' in "Sally".
+
+Caret One: (" ; ", 3)
