@@ -1,0 +1,15 @@
+<div id="description">This tests for a bug where moving the caret right towards a non-editable pocket of an editable region would make the caret disappear. The caret should be just before the 'S' in "Sally".</div>
+<div id="edit" contenteditable="true"><span contenteditable="false">Bob</span> ; <span contenteditable="false">Sally</span></div>
+
+<script>
+if (window.layoutTestController)
+    window.layoutTestController.dumpAsText();
+
+edit = document.getElementById("edit");
+text = edit.childNodes[1];
+s = window.getSelection();
+s.setPosition(text, text.length);
+s.modify("move", "right", "character");
+if (window.layoutTestController)
+    document.body.innerText = document.getElementById("description").innerText + "\n\nCaret One: (\"" + s.anchorNode.data + "\", " + s.anchorOffset + ")";
+</script>
