@@ -1,3 +1,15 @@
+2008-04-23  Justin Garcia  <justin.garcia@apple.com>
+
+        Reviewed by Darin Adler.
+
+        <rdar://problem/5825350> OWA: Caret disappears when navigating with arrows keys in contenteditable div
+
+        * editing/htmlediting.cpp:
+        (WebCore::firstEditablePositionAfterPositionInRoot): Return a null VisiblePosition if
+        this function moves out of highestRoot.  Re-wrote so as to not duplicate code inside
+        and outside of the while loop.
+        (WebCore::lastEditablePositionBeforePositionInRoot): Ditto.
+
 2008-04-23  Daniel Zucker  <zucker@wake3.com>
 
         Reviewed by Adam Roben.
